2007-05-08  Paolo Borelli  <pborelli@katamail.com>

	 * gtksourceview/language-specs/xml.lang: highlight character
	references instead of marking them as errors.

2007-05-06  Yevgen Muntyan  <muntyan@tamu.edu>

	 * gtksourceview/gtksourceiter.c (exact_prefix_cmp): corrected
         copy/paste error, it was G_UNICODE_NON_SPACING_MARK instead of
         G_UNICODE_COMBINING_MARK.
         * gtksourceview/language-specs/scheme.lang: made keywords use
         <prefix> and <suffix>.
         * gtksourceview/language-specs/octave.lang: put it into Scientific
         section.
         * gtksourceview/language-specs/gap.lang: new lang file, for GAP.

2007-05-05  Paolo Borelli  <pborelli@katamail.com>

	 * gtksourceview/language-specs/sh.lang: highlight $$ and $#

2007-05-02  Paolo Borelli  <pborelli@katamail.com>

	 * gtksourceview/language-specs/pascal.lang: fix hex numbers
	highlighting

2007-05-01  Paolo Borelli  <pborelli@katamail.com>

	 * gtksourceview/language-specs/scheme.lang: highlight TODOs
	etc in comments.
	 * gtksourceview/language-specs/csharp.lang: some niceties
	taken from c.lang

2007-05-01  Paolo Borelli  <pborelli@katamail.com>

	 * gtksourceview/language-specs/def.lang: shell like comments
	cannot span multiple lines

	 * gtksourceview/language-specs/desktop.lang:
	 * gtksourceview/language-specs/fortran.lang:
	 * gtksourceview/language-specs/perl.lang:
	 * gtksourceview/language-specs/ruby.lang:
	 * gtksourceview/language-specs/tcl.lang:

	Use default contexts where possible.

2007-05-01  Paolo Borelli  <pborelli@katamail.com>

	 * gtksourceview/gtksourcestylemanager.h: remove unused method
	declarations.

2007-04-27  Yevgen Muntyan  <muntyan@tamu.edu>

	 * gtksourceview/language-specs/sh.lang: highlight FIXME and such in comments.
	 * gtksourceview/libegg/regex/pcre/Makefile.am: removed CVS from EXTRA_DIST.
	 * gtksourceview/gtksourcelanguage.c (gtk_source_language_finalize): removed
         needless check (lang->priv != NULL); corrected a typo.