@@ -1,3 +1,12 @@
+2007-05-12  Paolo Borelli  <pborelli@katamail.com>
+
+	 * gtksourceview/gtksourceview.c:
+	 * gtksourceview/gtksourceview.h:
+	 * test/test-widget.c:
+
+	Turn the Smart-Home-End property into an enum which allows to
+	pick among all the variants of this feature.
+
 2007-05-08  Paolo Borelli  <pborelli@katamail.com>
 
 	 * gtksourceview/language-specs/xml.lang: highlight character
